@@ -3,6 +3,7 @@
 	* Require TYPO3 CMS 6.2.0
 	* Resolves #62770: Replace deprecated calls to ObjectManager ->create() with ->get()
 	* Resolves #61296: Move TCA configuration from ext_tables.php to Configuration/TCA
+	* Remove method TcaUtility::loadTCA
 
 2014-10-16  Stanislas Rolland  <typo3@sjbr.ca>
 
